--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
   </dependencies>
 
   <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <checkstyle.config.location>checkstyle.xml</checkstyle.config.location>
   </properties>
 
